unpackaged/objects/Summer_Independent_Research__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Adviser__c</fullName>
        <label>Academic Advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <label>Background and Rationale</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CAP__c</fullName>
        <label>CAP (non-freshmen only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Summer Independent Researchs</relationshipLabel>
        <relationshipName>Summer_Independent_Researchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Central_Research__c</fullName>
        <label>What is your central research question?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Summer Independent Research</relationshipLabel>
        <relationshipName>Summer_Independent_Researchs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <label>Deliverables</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Describe__c</fullName>
        <label>Describe</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hypothesis__c</fullName>
        <label>What is the hypothesis that you test?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location(s)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_Of_Major</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Materials and Methods</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Potential_Hurdle__c</fullName>
        <label>Potential Hurdles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Abstract__c</fullName>
        <label>Project Abstract</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Co_Supervisor_Email__c</fullName>
        <label>Project Co Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Co_Supervisor__c</fullName>
        <label>Project Co-Supervisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Supervisor_Email__c</fullName>
        <label>Project Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Supervisor__c</fullName>
        <label>Project Supervisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <label>References</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Research_Permit__c</fullName>
        <label>Research Permits</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Seeking_Answers__c</fullName>
        <label>Seeking Answers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Special_Circumstances__c</fullName>
        <label>Special Circumstances</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <label>Timeline</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Summer Independent Research</label>
    <nameField>
        <displayFormat>SIR-{0000000000}</displayFormat>
        <label>Summer Independent Research ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summer Independent Researchs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>